--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/storage": "^4.0.0",
     "expo": "^35.0.0",
+    "expo-camera": "^7.0.0",
     "expo-constants": "^7.0.1",
     "expo-image-picker": "^7.0.0",
     "expo-permissions": "^7.0.0",
+    "expo-web-browser": "^7.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-axios": "^0.17.1",
-    "react-native-gesture-handler": "~1.4.1",
+    "react-native-config": "^0.11.7",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
