--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-image-picker": "^7.0.0",
     "expo-permissions": "^7.0.0",
     "expo-web-browser": "^7.0.1",
+    "lottie-react-native": "^3.2.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -22,8 +23,10 @@
     "react-native-config": "^0.11.7",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-svg": "^9.13.3",
     "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7"
   },
