--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^4.0.0",
+    "@react-native-community/slider": "^2.0.2",
     "expo": "^35.0.0",
     "expo-camera": "^7.0.0",
     "expo-constants": "^7.0.1",
@@ -26,7 +27,9 @@
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-slider": "^0.11.0",
     "react-native-svg": "^9.13.3",
+    "react-native-svg-transformer": "^0.13.0",
     "react-native-unimodules": "0.6.0",
     "react-native-web": "^0.11.7"
   },
